# helloworld_zk

./: Cargo.toml  README.md  temp.txt
src/: lib.rs
src/instructions/: verify.rs
src/state/: key.rs
tests/: mollusk.rs  verify.rs
